Olog/public_html/static/css/style.css
/*
    Document   : style
    Created on : May 31, 2013, 2:32:33 PM
    Author     : user
    Description:
        Purpose of the stylesheet follows.
*/

html, body {
	margin: 0;
	padding: 0;
	height: 100%;
	width: 100%;
}

.top-margin {
	margin-top: 60px;
}

.well {
	padding: 0px;
	margin: 0px;
}

/* Style log START */
.log {
	display: block;
	cursor: pointer;
	border-top: 1px solid #dddddd;
	padding: 5px;
}

.log:hover {
	background-color: #eeeeee;
}

.log_click {
	background-color: white;
}

.log_click:hover {
	background-color: white;
}
.log-last {
	display: block;
	cursor: pointer;
	border-top: 1px solid #dddddd;
	border-bottom: 1px solid #dddddd;
	padding: 5px;
}

.log-last:hover {
	background-color: #eeeeee;
}

.log > img {
	margin-bottom: 3px;
}
/* Style log END */

.olog-nav {
	background-color: #eeeeee;
	margin: 0;
	padding: 7px;
	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
	border-radius: 0px;
}

.container-left {
	position: fixed;
	left: 0px;
	top: 40px;
	width: 20%;
	bottom: 0px;
}

.container-middle {
	position: fixed;
	left: 20%;
	width: 30%;
	top: 40px;
	bottom: 0px;
}

.container-right {
	position: fixed;
	right: 0px;
	top: 40px;
	width: 50%;
	bottom: 0px;
	display:none;
}

.container-middle-right {
	position: fixed;
	right: 0px;
	top: 40px;
	width: 80%;
	bottom: 0px;
}

/* Scrollable columns START*/
.container-scroll {
	position: absolute;
	top: 5px;
	right: 0px;
	left: 5px;
	bottom: 5px;
	overflow-y: auto;
}

.container-scroll-last-one {
	position: absolute;
	top: 5px;
	right: 5px;
	left: 5px;
	bottom: 5px;
	overflow-y: auto;
}
/* Scrollable columns END*/

.float_right {
	float: right;
}

.float_right_padding {
	padding: 3px;
}

.close_label, .close_label:hover, .close_label:focus {
	color: white;
	text-decoration: none;
}

.user_dropdown_menu {
	padding: 10px;
}

.search_input {
	display: inline-block;
	width: 80%;
}

.form-search {
	margin: 5px;
	margin-bottom: 10px;
	width: 90%;
}

.log_title {
	padding: 10px 5px 15px 5px;
	margin: 0;
	border-bottom: 1px solid #dddddd;
}

.log_body {
	padding: 10px;
	border-bottom: 1px solid #dddddd;
	background-color: white;
}

.log_title > h5 {
	padding:0;
	margin: 0;
}

.log_details {
	padding: 5px;
	margin: 0;
	border-bottom: 1px solid #dddddd;
	background-color: #eeeeee;
}

.display_none {
	display: none;
}

.log_show_details {
	font-weight: normal;
	text-decoration: none;
	padding-left: 10px;
}

.log_show_details:hover {
	text-decoration: none;
	color: #0088cc;
}

.log_attachments {
	padding: 5px;
	margin: 0;
	background-color: #eeeeee;
	border-bottom: 1px solid #dddddd;
	display: none;
}

.attachment_info {
	color: #aaaaaa;
}

.login_error {
	color: red;
	display: none;
}

#new_logbook_error_block {
	display: none;
}

#load_log_attachments > a > img {
	margin-bottom: 3px;
}

#attachments_size_dropdown {
	display: none;
}

/* css for timepicker */
.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
.ui-timepicker-div dl { text-align: left; }
.ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
.ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
.ui-timepicker-div td { font-size: 90%; }
.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }

.ui-timepicker-rtl{ direction: rtl; }
.ui-timepicker-rtl dl { text-align: right; }
.ui-timepicker-rtl dl dd { margin: 0 65px 10px 10px; }

